2006-04-02  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmchooser.glade, gui/gdmsetup.glade, gui/gdmsetup.c:
          Remove gnome glade, since it is not used anymore.  Fixes
          bug #424696.  Patch by Kristof Vansant <de_lupus@pandora.be>.

2006-04-02  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmlanguages.c: Fix strcpy so source and destination do not
          overlap.  Fixes bug #424299.  Patch by Ray Strode
          <rstrode@redhat.com>.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter_item.c, gui/greeter/greeter.c
	  gui/greeter_greeter_item_ulist.c, gui/greeter/greeter_system.c:
	  Fix gdmlogin and gdmgreeter so the "Configure GDM" menu choice is
	  not available when accessibility is turned on since running it
	  causes the system to hang.  Also fix gdmgreeter so the Face 
	  Browser is not displayed when Browser=false.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter_item_pam.c: Partially fix #412576 by adding
          ATK label for the entry field.  Patch provided by David Zeuthen
          <david@fubar.dk>.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter_item_customlist.c:  Fix check so the
          language combo style works.  Fixes bug #423063.  Patch
          provided by Simon <simon@munton.demon.co.uk>.

2006-03-21  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmphotosetup.desktop.in: Change Category to
          GNOME;GTK;Settings.  Fixes bug #417350.

2006-03-20  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.desktop.in.in, gui/gdmphotosetup.desktop.in:
          Change to category "GNOME;GTK;Settings;System;".  Fixes
	  bug #417350.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h, daemon/gdm.h: Remove X_XNEST_DISPLAY_ARG here also.
	* daemon/gdmconfig.c: Remove duplicate line.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>
