@@ -3,9 +3,7 @@ Encoding=UTF-8
 _Name=New Login in a Nested Window
 _GenericName=New Login in a Nested Window
 _Comment=Log in as another user inside a nested window
-# Given that we can set up the Xnest binary in the config file
-# this is minorly evil
-TryExec=Xnest
+TryExec=@X_XNEST_CMD@
 Exec=gdmflexiserver --xnest
 Icon=gdm-xnest
 Terminal=false
