@@ -9,3 +9,4 @@
 config/gnome.desktop.in
 config/ssh.desktop.in
 gui/gdmsetup.desktop.in
+gui/gdmflexiserver-xnest.desktop.in
