@@ -130,9 +130,9 @@ Ahh news...
 
 - Fix for a recently reported security issue that has ID
   CVE-2006-6105.  This fixes a problem where a user can 
-  enter strings like "%08x" into the gdmchooser "Add"
-  host button and print out memory.  This issue was
-  introduced into GDM 2.13.0.  (Brian Cameron)
+  enter strings like "%08x" into the gdmchooser entry and
+  press the "Add" host button to print out memory contents.
+  This issue was introduced into GDM 2.13.0.  (Brian Cameron)
 
 - Improvements to gdmsetup, which now supports many new
   features.  Fixes feature request #334186 and bugs
