@@ -1,5 +1,13 @@
 2006-04-02  Brian Cameron  <brian.cameron@sun.com>
 
+	* configure.ac, po/POTFILES.skip, gui/Makefile.am,
+	  gui/gdmflexiserver-xnest.desktop.in.in: Now specify 
+	  TryExec based on actual Nested Xserver command used.
+	* gui/gdmflexiserver-xnest.desktop.in: Remove, now 
+	  generated from in.in file.
+
+2006-04-02  Brian Cameron  <brian.cameron@sun.com>
+
         * gui/gdmchooser.glade, gui/gdmsetup.glade, gui/gdmsetup.c:
           Remove gnome glade, since it is not used anymore.  Fixes
           bug #424696.  Patch by Kristof Vansant <de_lupus@pandora.be>.
